--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Publicações"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Apresentaçes"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Ensino"
     url: /teaching/    
     
-  - title: "Portfolio"
+  - title: "Portfólio"
     url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Posts do Blog"
     url: /year-archive/
     
-  - title: "CV"
+  - title: "Currículo"
     url: /cv/
     
-  - title: "Guide"
+  - title: "Guia"
     url: /markdown/
