--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Publicações"
     url: /publications/
 
-  - title: "Apresentaçes"
+  - title: "Apresentações"
     url: /talks/    
 
   - title: "Ensino"
