--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Henrique Arsego"
-  avatar           : "profile.png"
+  avatar           : "55845409_10206105492151913_5127410010405470208_n.jpg"
   bio              : "Acadêmico de Ciência da COmputação"
   location         : "Chapecó"
   employer         :
